fixed image jumping up and down

--- a/styles/sass/layout/_destination.scss
+++ b/styles/sass/layout/_destination.scss
@@ -27,6 +27,7 @@
     > picture {
         grid-area: image;
         max-width: 60%;
+        align-self: start;
     }
     > .tab-list {
         grid-area: tabs;
